--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -9,7 +9,6 @@ jobs:
       matrix:
         os: [windows-2019, windows-2022]
         toolset: [ClangCL, MSVC]
-        configuration: [Debug, Release]
         exclude:
           - os: windows-2019
             toolset: ClangCL
@@ -20,11 +19,11 @@ jobs:
     - name: Set toolset
       if: matrix.toolset == 'ClangCL'
       run: echo "toolset=/p:PlatformToolset=${{ matrix.toolset }}" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
-    - name: Build
+    - name: Build Release
       shell: cmd
-      run: msbuild Osiris.sln /p:Platform=x86 /p:Configuration=${{ matrix.configuration }} ${{ env.toolset }}
+      run: msbuild Osiris.sln /p:Platform=x86 /p:Configuration=Release ${{ env.toolset }}
     - name: Publish DLL as Artifact
       uses: actions/upload-artifact@v2
       with:
         name: OsirisDll
-        path: ./dll.dll
+        path: ./Source/Release/Osiris.dll
