--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -4,21 +4,13 @@ on: [push, pull_request]
 
 jobs:
   msbuild:
-    runs-on: ${{ matrix.os }}
-    strategy:
-      matrix:
-        os: [windows-2019, windows-2022]
-        toolset: [ClangCL, MSVC]
-        exclude:
-          - os: windows-2019
-            toolset: ClangCL
+    runs-on: windows-latest
     steps:
     - uses: actions/checkout@v3
     - name: Add msbuild to PATH
       uses: microsoft/setup-msbuild@v1.1
     - name: Set toolset
-      if: matrix.toolset == 'ClangCL'
-      run: echo "toolset=/p:PlatformToolset=${{ matrix.toolset }}" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
+      run: echo "toolset=/p:PlatformToolset=MSVC" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
     - name: Build Release
       shell: cmd
       run: msbuild Osiris.sln /p:Platform=x86 /p:Configuration=Release ${{ env.toolset }}
@@ -26,4 +18,4 @@ jobs:
       uses: actions/upload-artifact@v2
       with:
         name: OsirisDll
-        path: ./Source/Release/Osiris.dll
+        path: ./Release/Osiris.dll
