--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -4,7 +4,7 @@ on: [push, pull_request]
 
 jobs:
   msbuild:
-    runs-on: windows-latest
+    runs-on: windows-2022
     steps:
     - uses: actions/checkout@v3
     - name: Add msbuild to PATH
@@ -13,7 +13,7 @@ jobs:
       run: echo "toolset=/p:PlatformToolset=MSVC" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
     - name: Build Release
       shell: cmd
-      run: msbuild Osiris.sln /p:Platform=x86 /p:Configuration=Release ${{ env.toolset }}
+      run: msbuild Osiris.sln /p:Platform=x86 /p:Configuration=Release MSVC
     - name: Publish DLL as Artifact
       uses: actions/upload-artifact@v2
       with:
