--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -4,24 +4,15 @@ on: [push, pull_request]
 
 jobs:
   msbuild:
-    runs-on: ${{ matrix.os }}
-    strategy:
-      matrix:
-        os: [windows-2022]
-        toolset: [MSVC]
-        exclude:
-          - os: windows-2019
-            toolset: ClangCL
+    runs-on: windows-2022
+
     steps:
     - uses: actions/checkout@v3
     - name: Add msbuild to PATH
       uses: microsoft/setup-msbuild@v1.1
-    - name: Set toolset
-      if: matrix.toolset == 'ClangCL'
-      run: echo "toolset=/p:PlatformToolset=${{ matrix.toolset }}" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
     - name: Build Release
       shell: cmd
-      run: msbuild Osiris.sln /p:Platform=x86 /p:Configuration=Release ${{ env.toolset }}
+      run: msbuild Osiris.sln /p:Platform=x86 /p:Configuration=Release /p:PlatformToolset=MSVC
     - name: Publish DLL as Artifact
       uses: actions/upload-artifact@v2
       with:
