--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -4,7 +4,7 @@ on: [push, pull_request]
 
 jobs:
   msbuild:
-    runs-on: ${{ matrix.toolset }}
+    runs-on: ${{ matrix.os }}
     strategy:
       matrix:
         os: [windows-2022]
@@ -16,8 +16,9 @@ jobs:
     - uses: actions/checkout@v3
     - name: Add msbuild to PATH
       uses: microsoft/setup-msbuild@v1.1
-    - name: Print Toolset
-      run: echo ${{ env.toolset }}
+    - name: Set toolset
+      if: matrix.toolset == 'ClangCL'
+      run: echo "toolset=/p:PlatformToolset=${{ matrix.toolset }}" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
     - name: Build Release
       shell: cmd
       run: msbuild Osiris.sln /p:Platform=x86 /p:Configuration=Release ${{ env.toolset }}
